--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -51,29 +51,11 @@ jobs:
           path: ~/.npm
           key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
-      - run: npm ci && npm run test:visual
-
-  build:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci && npm run build-storybook
+      - run: npm ci && npm run build-storybook && npm run test:visual
 
   chromatic-deployment:
     runs-on: ubuntu-latest
-    needs: [build, test, test_visual]
+    needs: [lint, test, test_visual]
     steps:
       - uses: actions/checkout@v2
         with:
