--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,7 +17,8 @@ jobs:
           path: ~/.npm
           key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
-      - run: npm ci && npm run lint
+      - run: npm ci
+      - run: npm run lint
 
   test:
     runs-on: ubuntu-latest
@@ -34,7 +35,8 @@ jobs:
           path: ~/.npm
           key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
-      - run: npm ci &&  npm run test
+      - run: npm ci
+      - run: npm run test
 
   test_visual:
     runs-on: ubuntu-latest
@@ -51,32 +53,12 @@ jobs:
           path: ~/.npm
           key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
-      - run: npm ci && npm run build-storybook && npm run test:visual
-
-  chromatic-deployment:
-    runs-on: ubuntu-latest
-    needs: [lint, test, test_visual]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
       - run: npm ci
+      - run: npm run build-storybook && npm run test:visual
 
-      - name: Publish to Chromatic
-        uses: chromaui/action@v1
+      - name: Archive screenshots
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          exitZeroOnChanges: true
-          workingDir: packages/ui
+          name: react-example-screenshots
+          path: packages/ui/.loki
