--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,24 +2,6 @@ name: check pull request
 on: pull_request
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci
-      - run: npm run lint
-
   test:
     runs-on: ubuntu-latest
     steps:
@@ -36,12 +18,15 @@ jobs:
           key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
       - run: npm ci
+      - run: npm run lint
       - run: npm run test
 
   test_visual:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install ImageMagick
+        run: sudo apt install imagemagick
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
@@ -54,7 +39,8 @@ jobs:
           key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
       - run: npm ci
-      - run: npm run build-storybook && npm run test:visual
+      - run: npm run build-storybook
+      - run: npm run test:visual
 
       - name: Archive screenshots
         if: ${{ failure() }}
