fix(ci): use lerna force-publish

--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "start": "lerna run --scope @hazelcast/ui storybook",
     "prepack": "npm run compile",
     "prepare": "husky install",
-    "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags --no-push"
+    "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags --no-push --force-publish"
   }
 }
