--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,40 +5,14 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci
+      - uses: ./.github/actions/install
       - run: npm run lint
       - run: npm run test
 
   test_visual:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Install ImageMagick
-        run: sudo apt install imagemagick
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci
+      - uses: ./.github/actions/install
       - run: npm run build-storybook
       - run: npm run test:visual
 
@@ -48,28 +22,3 @@ jobs:
         with:
           name: loki-screenshots
           path: packages/ui/.loki
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: [test, test_visual]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci
-      - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: Publish to npm
-        run: npm run publish-canary
