--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -9,40 +9,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
+      - uses: ./.github/actions/install
 
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci
       - run: npm run lint
       - run: npm run test
 
   test_visual:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Install ImageMagick
-        run: sudo apt install imagemagick
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
+      - uses: ./.github/actions/install
 
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci
       - run: npm run build-storybook
       - run: npm run test:visual
 
@@ -57,21 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, test_visual]
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci
+      - uses: ./.github/actions/install
 
       - name: Publish to Chromatic
         uses: chromaui/action@v1
@@ -85,21 +47,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, test_visual]
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
+      - uses: ./.github/actions/install
 
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci
       - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
