--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,6 +5,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: ./.github/actions/install
       - run: npm run lint
       - run: npm run test
@@ -12,6 +13,7 @@ jobs:
   test_visual:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: ./.github/actions/install
       - run: npm run build-storybook
       - run: npm run test:visual
