--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,18 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci
+      - uses: ./.github/actions/install
       - run: npm run lint
       - run: npm run test
 
@@ -25,20 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install ImageMagick
-        run: sudo apt install imagemagick
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - run: npm ci
+      - uses: ./.github/actions/install
       - run: npm run build-storybook
       - run: npm run test:visual
 
