--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  release_tag:
+  publish_release:
     # this job will only run if the PR has been merged
     if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'release/v')
     runs-on: ubuntu-latest
@@ -22,12 +22,12 @@ jobs:
         if: steps.check-release.outputs.match == 'true'
         id: create_tag
         run: |
-          tag=$(echo ${{ github.event.pull_request.head.ref }} | sed 's/release\/v//')
+          tag=$(echo ${{ github.event.pull_request.head.ref }} | sed 's/release\///')
           echo ::set-output name=tag::$tag
       - uses: actions/checkout@v2
       - name: Set tag
         if: steps.check-release.outputs.match == 'true'
         run: |
           npx lerna publish from-git
-          git tag --force v${{ steps.create_tag.outputs.tag }}
-          git push -f origin v${{ steps.create_tag.outputs.tag }}
+          git tag --force ${{ steps.create_tag.outputs.tag }} -m "tag release ${{ steps.create_tag.outputs.tag }}"
+          git push -f origin ${{ steps.create_tag.outputs.tag }}
