--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,11 +12,14 @@ jobs:
       - name: 'Build Changelog'
         id: build_changelog
         uses: mikepenz/release-changelog-builder-action@main
+        with:
+          fromTag: v1.1.0
+          toTag: v1.2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - run: |
-          echo #${{steps.build_changelog.outputs.changelog}}
+          echo > #${{steps.build_changelog.outputs.changelog}} <
 
   test:
     runs-on: ubuntu-latest
