--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "version": "1.3.1",
   "command": {
     "version": {
-      "allowBranch": ["master", "release/*"]
+      "allowBranch": ["master", "release/*", "feature/*"]
     }
   }
 }
