--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,7 +31,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: git tag --sort version:refname --points-at HEAD
+      - name: Version
+        run: npx lerna version 1.3.0
       - name: Publish to npm
         run: |
-          npx lerna version 1.3.0
           npx lerna publish from-git --force-publish
