--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,37 +2,25 @@ name: check pull request
 on: pull_request
 
 jobs:
-  #  test:
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - uses: actions/checkout@v2
-  #      - uses: ./.github/actions/install
-  #      - run: npm run lint
-  #      - run: npm run test
-  #
-  #  test_visual:
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - uses: actions/checkout@v2
-  #      - uses: ./.github/actions/install
-  #      - run: npm run build-storybook
-  #      - run: npm run test:visual
-  #
-  #      - name: Archive screenshots
-  #        if: ${{ failure() }}
-  #        uses: actions/upload-artifact@v1
-  #        with:
-  #          name: loki-screenshots
-  #          path: packages/ui/.loki
-
-  publish_release:
-    # this job will only run if the PR has been merged
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: git tag --sort version:refname --points-at HEAD
-      - name: Version
-        run: npx lerna version 1.3.0
-      - name: Publish to npm
-        run: |
-          npx lerna publish from-git --force-publish
+      - uses: ./.github/actions/install
+      - run: npm run lint
+      - run: npm run test
+
+  test_visual:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/install
+      - run: npm run build-storybook
+      - run: npm run test:visual
+
+      - name: Archive screenshots
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v1
+        with:
+          name: loki-screenshots
+          path: packages/ui/.loki
