--- a/.github/workflows/re-publish.yml
+++ b/.github/workflows/re-publish.yml
@@ -10,5 +10,4 @@ jobs:
       - name: Version
         run: npx lerna version 1.3.0
       - name: Publish to npm
-        run: |
-          npx lerna publish from-git --force-publish
+        run: npx lerna publish from-git --force-publish
