--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -55,6 +55,8 @@ jobs:
     needs: [test, test_visual]
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 100
       - uses: ./.github/actions/install
       - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
         env:
@@ -83,6 +85,6 @@ jobs:
       - name: Set tag
         if: steps.check-release.outputs.match == 'true'
         run: |
-          npx lerna publish from-git
+          npx lerna publish from-git --no-push --force-publish
           git tag --force ${{ steps.create_tag.outputs.tag }} -m "tag release ${{ steps.create_tag.outputs.tag }}"
           git push -f origin ${{ steps.create_tag.outputs.tag }}
