--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -24,3 +24,14 @@ jobs:
         with:
           name: loki-screenshots
           path: packages/ui/.loki
+
+  publish_canary:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: ./.github/actions/install
+      - run: git describe
+      - name: Publish to npm
+        run: npm run publish-canary
