--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -84,6 +84,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Set tag
         if: steps.check-release.outputs.match == 'true'
         run: |
