--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,6 +46,9 @@
     "url": "https://github.com/hazelcast/frontend-shared/issues"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.19.1",
+    "@codemirror/stream-parser": "^0.19.3",
+    "@codemirror/view": "^0.19.35",
     "@hazelcast/helpers": "^1.3.1",
     "@hazelcast/services": "^1.3.1",
     "@headlessui/react": "^1.4.2",
@@ -73,6 +76,7 @@
     "use-deep-compare": "^1.1.0"
   },
   "devDependencies": {
+    "@codemirror/legacy-modes": "0.19.0",
     "@hazelcast/test-helpers": "^1.3.1",
     "@storybook/addon-docs": "^6.4.9",
     "@storybook/addons": "^6.4.9",
