--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
-    "lerna": "^5.6.2",
-    "lerna-update-wizard": "^1.1.0",
     "link-parent-bin": "^2.0.0",
     "lint-staged": "^12.1.3",
     "patch-package": "^6.4.7",
@@ -34,15 +32,15 @@
   "scripts": {
     "link-parent-bin": "link-parent-bin",
     "patch-package": "patch-package",
-    "compile": "lerna run compile",
-    "postinstall": "npm run patch-package && lerna bootstrap --hoist && npm run link-parent-bin && npm run compile",
-    "test": "lerna run --parallel test",
+    "compile": "pnpm m run compile",
+    "postinstall11": "npm run patch-package && npm run link-parent-bin && npm run compile",
+    "test": "pnpm m run test",
     "test:visual": "lerna run --parallel test:visual",
-    "lint": "lerna run --parallel lint",
+    "lint": "pnpm m run lint",
     "verify-all": "npm run lint && npm run test && npm run build-storybook && npm run test:visual",
-    "build-storybook": "lerna run --parallel build-storybook",
-    "publish-storybook": "lerna run --scope @hazelcast/ui publish-storybook",
-    "start": "lerna run --scope @hazelcast/ui storybook",
+    "build-storybook": "pnpm m run build-storybook",
+    "publish-storybook": "pnpm run --filter @hazelcast/ui publish-storybook",
+    "start": "pnpm run --filter @hazelcast/ui storybook",
     "prepack": "npm run compile",
     "prepare": "husky install",
     "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags"
