update(build): update react to v17

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -88,20 +88,21 @@
     "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest-axe": "^3.5.3",
-    "@types/react": "^16.14.21",
+    "@types/react": "^17.0.45",
     "@types/react-datepicker": "^4.3.2",
-    "@types/react-dom": "^16.9.14",
+    "@types/react-dom": "^17.0.17",
+    "babel-loader": "^8.2.5",
     "doiuse": "^4.2.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "jest-axe": "^5.0.1",
     "loki": "^0.31.1",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "postcss-reporter": "^7.0.4",
     "postcss-scss": "^4.0.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "storybook-addon-designs": "^6.2.0",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
