--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -67,7 +67,7 @@
     "react-merge-refs": "^1.1.0",
     "react-modal": "^3.14.4",
     "react-popper": "^2.2.3",
-    "react-resize-aware": "3.1.1",
+    "react-resize-aware": "^3.1.1",
     "react-select": "^4.1.0",
     "react-simple-timefield": "^3.2.5",
     "react-table": "^7.7.0",
@@ -77,13 +77,13 @@
   },
   "devDependencies": {
     "@hazelcast/test-helpers": "^1.3.1",
-    "@storybook/addon-docs": "^6.5.16",
-    "@storybook/addons": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/addon-docs": "^6.5.5",
+    "@storybook/addons": "^6.5.5",
+    "@storybook/builder-webpack5": "^6.5.5",
+    "@storybook/manager-webpack5": "^6.5.5",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.5.16",
-    "@storybook/theming": "^6.5.16",
+    "@storybook/react": "^6.5.5",
+    "@storybook/theming": "^6.5.5",
     "@types/classnames": "^2.3.1",
     "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -96,7 +96,7 @@
     "enzyme": "^3.11.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "jest-axe": "^5.0.1",
-    "loki": "^0.31.1",
+    "loki": "^0.28.1",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "postcss-reporter": "^7.0.4",
@@ -110,7 +110,7 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-prettier": "^2.0.0",
     "stylelint-scss": "^4.0.1",
-    "webpack": "^5.79.0",
+    "webpack": "^5.65.0",
     "yup": "^0.32.11"
   }
 }
