--- a/package.json
+++ b/package.json
@@ -44,5 +44,21 @@
     "prepack": "npm run compile",
     "prepare": "husky install",
     "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags"
+  },
+  "pnpm": {
+    "overrides": {
+      "glob-parent@<5.1.2": ">=5.1.2",
+      "minimist@<1.2.6": ">=1.2.6",
+      "nanoid@>=3.0.0 <3.1.31": ">=3.1.31",
+      "follow-redirects@<1.14.8": ">=1.14.8",
+      "shelljs@<0.8.5": ">=0.8.5",
+      "follow-redirects@<1.14.7": ">=1.14.7",
+      "path-parse@<1.0.7": ">=1.0.7",
+      "ini@<1.3.6": ">=1.3.6",
+      "log4js@<6.4.0": ">=6.4.0",
+      "trim@<0.0.3": ">=0.0.3",
+      "ansi-regex@>=3.0.0 <3.0.1": ">=3.0.1",
+      "trim-newlines@<3.0.1": ">=3.0.1"
+    }
   }
 }
