--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,18 +27,18 @@
     "compile": "shx rm -f *.tsbuildinfo && shx rm -rf lib && shx mkdir lib && shx cp -r src/* lib && shx rm -rf lib/*.{tsx,ts} && shx rm -rf lib/**/*.{tsx,ts} && tsc -p tsconfig.build.json",
     "test": "jest --maxWorkers=50%",
     "test:watch": "jest --watch",
-    "start": "npm run storybook",
+    "start": "pnpm run storybook",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "publish-storybook": "chromatic --storybook-build-dir storybook-static --project-token $CHROMATIC_PROJECT_TOKEN --exit-zero-on-changes",
     "chromatic": "chromatic --project-token=CHROMATIC_PROJECT_TOKEN",
     "test:visual": "loki --verboseRenderer --requireReference --reactUri file:./storybook-static --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
     "test:visual:approve": "loki approve",
-    "generate-screenshots": "npm run build-storybook && loki update --reactUri file:./storybook-static --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
-    "lint": "npm run lint:ts && npm run lint:css",
-    "lint:fix": "npm run lint:ts:fix && npm run lint:css:fix",
+    "generate-screenshots": "pnpm run build-storybook && loki update --reactUri file:./storybook-static --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
+    "lint": "pnpm run lint:ts && pnpm run lint:css",
+    "lint:fix": "pnpm run lint:ts:fix && pnpm run lint:css:fix",
     "lint:ts": "eslint --ext .ts,.tsx .",
-    "lint:ts:fix": "npm run lint -- --fix",
+    "lint:ts:fix": "pnpm run lint -- --fix",
     "lint:css": "postcss --config ./.postcss-lint --replace '**/*.{css,scss}'",
     "lint:css:fix": "stylelint --fix '**/*.{css,scss}'"
   },
