--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,8 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/install
-      - run: npm run lint
-      - run: npm run test
+      - run: pnpm run lint
+      - run: pnpm run test
         env:
           NODE_OPTIONS: --max-old-space-size=8192
 
@@ -17,8 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/install
-      - run: npm run build-storybook
-      - run: npm run test:visual
+      - run: pnpm run build-storybook
+      - run: pnpm run test:visual
 
       - name: Archive screenshots
         if: ${{ failure() }}
