--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/install
-      - run: npm run lint
-      - run: npm run test
+      - run: pnpm run lint
+      - run: pnpm run test
         env:
           NODE_OPTIONS: --max-old-space-size=8192
 
@@ -24,8 +24,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/install
-      - run: npm run build-storybook
-      - run: npm run test:visual
+      - run: pnpm run build-storybook
+      - run: pnpm run test:visual
 
       - name: Archive screenshots
         if: ${{ failure() }}
@@ -65,7 +65,7 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish to npm
-        run: npm run publish-canary
+        run: pnpm run publish-canary
 
   publish_release:
     # this job will only run if the PR has been merged
