--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
-    "link-parent-bin": "^2.0.0",
     "lint-staged": "^12.1.3",
     "patch-package": "^6.4.7",
     "prettier": "^2.5.1",
@@ -31,9 +30,8 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "link-parent-bin": "link-parent-bin",
     "compile": "pnpm m run compile",
-    "postinstall": "pnpm run link-parent-bin && pnpm run compile",
+    "postinstall": "pnpm run compile",
     "test": "pnpm m run test",
     "test:visual": "pnpm run --filter @hazelcast/ui test:visual",
     "lint": "pnpm m run lint",
