--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -67,6 +67,7 @@
     "react-popper": "^2.2.3",
     "react-resize-aware": "^3.1.1",
     "react-select": "^4.1.0",
+    "react-simple-timefield": "^3.2.5",
     "react-table": "^7.7.0",
     "react-uid": "^2.3.1",
     "react-use": "^17.3.1",
