--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -66,6 +66,15 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish to npm
         run: pnpm run publish-canary
+      - name: create and publish versions
+        uses: changesets/action@master
+        with:
+          version: pnpm ci:version
+          commit: 'chore: update versions'
+          title: 'chore: update versions'
+          publish: pnpm ci:publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish_release:
     # this job will only run if the PR has been merged
