update(ui): add new Carousel Component

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -51,7 +51,7 @@
     "@headlessui/react": "^1.4.2",
     "@icons-pack/react-simple-icons": "^4.6.1",
     "@popperjs/core": "^2.11.0",
-    "@types/react-modal": "^3.13.1",
+    "@types/react-modal": "3.13.1",
     "@types/react-select": "3.0.26",
     "@types/react-table": "^7.7.9",
     "classnames": "^2.3.1",
@@ -59,6 +59,7 @@
     "dequal": "^2.0.2",
     "focus-trap-react": "^8.9.0",
     "formik": "^2.2.9",
+    "nuka-carousel": "^5.4.0",
     "rc-tooltip": "^5.1.1",
     "react-datepicker": "^4.5.0",
     "react-feather": "^2.0.9",
