--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "compile": "lerna run compile",
     "postinstall": "npm run patch-package && lerna bootstrap --hoist && npm run link-parent-bin && npm run compile",
     "test": "lerna run --parallel test",
+    "test:prod": "lerna run test",
     "test:visual": "lerna run --parallel test:visual",
     "lint": "lerna run --parallel lint",
     "verify-all": "npm run lint && npm run test && npm run build-storybook && npm run test:visual",
