--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/install
       - run: npm run lint
-      - run: npm run test:prod
+      - run: npm run test
         env:
           NODE_OPTIONS: --max-old-space-size=8192
 
