--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: ./.github/actions/install
       - run: npm run lint
       - run: npm run test
+        env:
+          NODE_OPTIONS: --max-old-space-size=8192
 
   test_visual:
     if: github.event.pull_request.merged == true
