--- a/package.json
+++ b/package.json
@@ -2,32 +2,33 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "@changesets/cli": "^2.22.0",
-    "@storybook/source-loader": "^6.5.5",
-    "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "chromatic": "^6.2.3",
-    "css-loader": "^6.5.1",
-    "doctoc": "^2.1.0",
-    "eslint": "^8.5.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.4",
+    "@changesets/cli": "^2.26.0",
+    "@storybook/source-loader": "^6.5.16",
+    "@types/jest": "^29.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "chromatic": "^6.17.1",
+    "css-loader": "^6.7.3",
+    "doctoc": "^2.2.1",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.5",
-    "lint-staged": "^12.1.3",
-    "patch-package": "^6.4.7",
-    "prettier": "^2.5.1",
-    "regenerator-runtime": "^0.13.9",
-    "sass": "^1.45.0",
-    "sass-loader": "^12.4.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "lint-staged": "^13.1.2",
+    "patch-package": "^6.5.1",
+    "prettier": "^2.8.4",
+    "regenerator-runtime": "^0.13.11",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
     "shx": "^0.3.3",
     "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.3.5"
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "compile": "pnpm m run compile",
@@ -40,8 +41,7 @@
     "publish-storybook": "pnpm run --filter @hazelcast/ui publish-storybook",
     "start": "pnpm run --filter @hazelcast/ui storybook",
     "prepack": "pnpm run compile",
-    "prepare": "husky install",
-    "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags"
+    "prepare": "husky install"
   },
   "pnpm": {
     "overrides": {
