fix(test): update dependencies

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -67,7 +67,7 @@
     "react-merge-refs": "^1.1.0",
     "react-modal": "^3.14.4",
     "react-popper": "^2.2.3",
-    "react-resize-aware": "^3.1.1",
+    "react-resize-aware": "3.1.1",
     "react-select": "^4.1.0",
     "react-simple-timefield": "^3.2.5",
     "react-table": "^7.7.0",
