--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -36,10 +36,10 @@
     "url": "https://github.com/hazelcast/frontend-shared/issues"
   },
   "peerDependencies": {
-    "@types/react": "16 || ^17.0.0",
-    "@types/react-dom": "16 || ^17.0.0",
-    "react": "^16.14.0 || ^17.0.0",
-    "react-dom": "^16.14.0 || ^17.0.0"
+    "@types/react": "16 || ^17.0.0 || ^18.0.0",
+    "@types/react-dom": "16 || ^17.0.0 || ^18.0.0",
+    "react": "^16.14.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.14.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@storybook/addons": "^6.5.16",
