--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,14 +50,11 @@
     "@hazelcast/services": "^1.3.1",
     "@headlessui/react": "^1.4.2",
     "@icons-pack/react-simple-icons": "^4.6.1",
-    "@popperjs/core": "^2.11.0",
-    "@types/react-modal": "3.13.1",
-    "@types/react-select": "3.0.26",
-    "@types/react-table": "^7.7.9",
+    "@popperjs/core": "^2.11.7",
     "classnames": "^2.3.1",
     "date-fns": "^2.27.0",
     "dequal": "^2.0.2",
-    "focus-trap-react": "^8.9.0",
+    "focus-trap-react": "^10.1.1",
     "formik": "^2.2.9",
     "nuka-carousel": "^5.4.0",
     "rc-tooltip": "^5.1.1",
@@ -88,9 +85,12 @@
     "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest-axe": "^3.5.3",
-    "@types/react": "^16.14.21",
+    "@types/react": "16.14.40",
     "@types/react-datepicker": "^4.3.2",
-    "@types/react-dom": "^16.9.14",
+    "@types/react-dom": "16.9.19",
+    "@types/react-modal": "3.13.1",
+    "@types/react-select": "3.0.26",
+    "@types/react-table": "^7.7.9",
     "doiuse": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -101,8 +101,9 @@
     "postcss-reporter": "^7.0.4",
     "postcss-scss": "^4.0.2",
     "react": "^16.14.0",
+    "react-docgen-typescript-plugin": "^1.0.5",
     "react-dom": "^16.14.0",
-    "storybook-addon-designs": "^6.2.0",
+    "storybook-addon-designs": "^6.3.1",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
@@ -111,5 +112,11 @@
     "stylelint-scss": "^4.0.1",
     "webpack": "^5.79.0",
     "yup": "^0.32.11"
+  },
+  "peerDependencies": {
+    "@types/react": "16 || ^17.0.0 || ^18.0.0",
+    "@types/react-dom": "16 || ^17.0.0 || ^18.0.0",
+    "react": "^16.14.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.14.0 || ^17.0.0 || ^18.0.0"
   }
 }
