--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -91,6 +91,8 @@
     "@types/react-modal": "3.13.1",
     "@types/react-select": "3.0.26",
     "@types/react-table": "^7.7.9",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "doiuse": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -110,7 +112,7 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-prettier": "^2.0.0",
     "stylelint-scss": "^4.0.1",
-    "webpack": "^5.79.0",
+    "webpack": "^5.81.0",
     "yup": "^0.32.11"
   },
   "peerDependencies": {
