--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -73,6 +73,7 @@
     "use-deep-compare": "^1.1.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.4",
     "@hazelcast/test-helpers": "^1.3.1",
     "@storybook/addon-docs": "^6.5.16",
     "@storybook/addons": "^6.5.16",
@@ -82,9 +83,9 @@
     "@storybook/react": "^6.5.16",
     "@storybook/theming": "^6.5.16",
     "@types/classnames": "^2.3.1",
-    "@types/enzyme": "^3.10.10",
+    "@types/enzyme": "^3.10.13",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest-axe": "^3.5.3",
+    "@types/jest-axe": "^3.5.5",
     "@types/react": "16.14.40",
     "@types/react-datepicker": "^4.3.2",
     "@types/react-dom": "16.9.19",
@@ -96,7 +97,7 @@
     "doiuse": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "jest-axe": "^5.0.1",
+    "jest-axe": "^7.0.1",
     "loki": "^0.31.1",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
