--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -26,12 +26,15 @@
     "compile": "tsc -p tsconfig.build.json",
     "test": "jest",
     "lint": "eslint --ext .ts,.tsx .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "pnpm run lint -- --fix"
   },
   "bugs": {
     "url": "https://github.com/hazelcast/frontend-shared/issues"
   },
   "dependencies": {
     "serialize-error": "^7.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.18.13"
   }
 }
