--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -1,19 +1,35 @@
 name: install
-description: cache npm install
+description: cache pnpm install
 
 runs:
   using: 'composite'
   steps:
-    - uses: actions/setup-node@v2
+    - name: Install Node.js
+      uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: 16
 
-    - uses: actions/cache@v2
-      env:
-        cache-name: cache-node-modules
+    - uses: pnpm/action-setup@v2
+      name: Install pnpm
+      id: pnpm-install
       with:
-        path: ~/.npm
-        key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        version: 7
+        run_install: false
 
-    - shell: bash
-      run: npm ci
+    - name: Get pnpm store directory
+      id: pnpm-cache
+      shell: bash
+      run: |
+        echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+
+    - uses: actions/cache@v3
+      name: Setup pnpm cache
+      with:
+        path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
+
+    - name: Install dependencies
+      shell: bash
+      run: pnpm install
