--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,24 +1,27 @@
 name: check pull request
 on: pull_request
+env:
+  CI: true
+  PNPM_CACHE_FOLDER: .pnpm-store
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/install
-      - run: npm run lint
-      - run: npm run test
+      - run: pnpm run lint
+      - run: pnpm run test
         env:
           NODE_OPTIONS: --max-old-space-size=8192
 
   test_visual:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/install
-      - run: npm run build-storybook
-      - run: npm run test:visual
+      - run: pnpm run build-storybook
+      - run: pnpm run test:visual
 
       - name: Archive screenshots
         if: ${{ failure() }}
