--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -1,5 +1,7 @@
 name: publish release
-
+env:
+  CI: true
+  PNPM_CACHE_FOLDER: .pnpm-store
 # only trigger on pull request closed events
 on:
   pull_request:
@@ -11,10 +13,10 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/install
-      - run: npm run lint
-      - run: npm run test
+      - run: pnpm run lint
+      - run: pnpm run test
         env:
           NODE_OPTIONS: --max-old-space-size=8192
 
@@ -22,10 +24,10 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/install
-      - run: npm run build-storybook
-      - run: npm run test:visual
+      - run: pnpm run build-storybook
+      - run: pnpm run test:visual
 
       - name: Archive screenshots
         if: ${{ failure() }}
@@ -57,7 +59,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, test_visual]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - uses: ./.github/actions/install
@@ -65,7 +67,7 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish to npm
-        run: npm run publish-canary
+        run: pnpm run publish-canary
 
   publish_release:
     # this job will only run if the PR has been merged
