--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,7 @@
 {
   "packages": ["packages/*"],
+  "npmClient": "pnpm",
+  "useWorkspaces": true,
   "version": "1.3.1",
   "command": {
     "version": {
