--- a/package.json
+++ b/package.json
@@ -1,50 +1,75 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
     "@storybook/source-loader": "^6.4.9",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^29.5.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "babel-jest": "^29.5.0",
     "chromatic": "^6.2.3",
     "css-loader": "^6.5.1",
     "doctoc": "^2.1.0",
     "eslint": "^8.5.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.5",
-    "lerna": "^5.6.2",
-    "lerna-update-wizard": "^1.1.0",
-    "link-parent-bin": "^2.0.0",
-    "lint-staged": "^12.1.3",
-    "patch-package": "^6.4.7",
-    "prettier": "^2.5.1",
-    "regenerator-runtime": "^0.13.9",
-    "sass": "^1.45.0",
-    "sass-loader": "^12.4.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "lerna": "^6.6.1",
+    "lint-staged": "^13.1.2",
+    "patch-package": "^6.5.1",
+    "prettier": "^2.8.8",
+    "regenerator-runtime": "^0.13.11",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
     "shx": "^0.3.3",
     "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.8.4"
   },
   "scripts": {
-    "link-parent-bin": "link-parent-bin",
-    "patch-package": "patch-package",
-    "compile": "lerna run compile",
-    "postinstall": "npm run patch-package && lerna bootstrap --hoist && npm run link-parent-bin && npm run compile",
-    "test": "lerna run --parallel test",
-    "test:visual": "lerna run --parallel test:visual",
-    "lint": "lerna run --parallel lint",
-    "verify-all": "npm run lint && npm run test && npm run build-storybook && npm run test:visual",
-    "build-storybook": "lerna run --parallel build-storybook",
-    "publish-storybook": "lerna run --scope @hazelcast/ui publish-storybook",
-    "start": "lerna run --scope @hazelcast/ui storybook",
-    "prepack": "npm run compile",
+    "compile": "pnpm m run compile",
+    "postinstall": "pnpm run compile",
+    "test": "pnpm m run test",
+    "test:visual": "pnpm run --filter @hazelcast/ui test:visual",
+    "test:visual:approve": "pnpm run --filter @hazelcast/ui test:visual:approve",
+    "lint": "pnpm m run lint",
+    "verify-all": "pnpm run lint && pnpm run test && pnpm run build-storybook && pnpm run test:visual",
+    "build-storybook": "pnpm m run build-storybook",
+    "publish-storybook": "pnpm run --filter @hazelcast/ui publish-storybook",
+    "start": "pnpm run --filter @hazelcast/ui storybook",
+    "prepack": "pnpm run compile",
     "prepare": "husky install",
     "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags"
+  },
+  "pnpm": {
+    "overrides": {
+      "shelljs@<0.8.5": ">=0.8.5",
+      "qs@>=6.10.0 <6.10.3": ">=6.10.3",
+      "@sideway/formula@<3.0.1": ">=3.0.1",
+      "json5@<1.0.2": ">=1.0.2",
+      "minimist@>=1.0.0 <1.2.6": ">=1.2.6",
+      "loader-utils@<1.4.1": ">=1.4.1",
+      "loader-utils@>=2.0.0 <2.0.3": ">=2.0.3",
+      "loader-utils@>=2.0.0 <2.0.4": ">=2.0.4",
+      "loader-utils@>=1.0.0 <1.4.2": ">=1.4.2",
+      "ini@<1.3.6": ">=1.3.6",
+      "trim-newlines@<3.0.1": ">=3.0.1",
+      "shell-quote@<=1.7.2": ">=1.7.3",
+      "decode-uri-component@<0.2.1": ">=0.2.1",
+      "terser@>=5.0.0 <5.14.2": ">=5.14.2",
+      "terser@<4.8.1": ">=4.8.1",
+      "yaml@>=2.0.0-5 <2.2.2": ">=2.2.2"
+    }
   }
 }
