--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,18 +27,18 @@
     "compile": "shx rm -f *.tsbuildinfo && shx rm -rf lib && shx mkdir lib && shx cp -r src/* lib && shx rm -rf lib/*.{tsx,ts} && shx rm -rf lib/**/*.{tsx,ts} && tsc -p tsconfig.build.json",
     "test": "jest --maxWorkers=50%",
     "test:watch": "jest --watch",
-    "start": "npm run storybook",
+    "start": "pnpm run storybook",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "publish-storybook": "chromatic --storybook-build-dir storybook-static --project-token $CHROMATIC_PROJECT_TOKEN --exit-zero-on-changes",
     "chromatic": "chromatic --project-token=CHROMATIC_PROJECT_TOKEN",
     "test:visual": "loki --verboseRenderer --requireReference --reactUri file:./storybook-static --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
     "test:visual:approve": "loki approve",
-    "generate-screenshots": "npm run build-storybook && loki update --reactUri file:./storybook-static --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
-    "lint": "npm run lint:ts && npm run lint:css",
-    "lint:fix": "npm run lint:ts:fix && npm run lint:css:fix",
+    "generate-screenshots": "pnpm run build-storybook && loki update --reactUri file:./storybook-static --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
+    "lint": "pnpm run lint:ts && pnpm run lint:css",
+    "lint:fix": "pnpm run lint:ts:fix && pnpm run lint:css:fix",
     "lint:ts": "eslint --ext .ts,.tsx .",
-    "lint:ts:fix": "npm run lint -- --fix",
+    "lint:ts:fix": "pnpm run lint -- --fix",
     "lint:css": "postcss --config ./.postcss-lint --replace '**/*.{css,scss}'",
     "lint:css:fix": "stylelint --fix '**/*.{css,scss}'"
   },
@@ -50,29 +50,29 @@
     "@hazelcast/services": "^1.3.1",
     "@headlessui/react": "^1.4.2",
     "@icons-pack/react-simple-icons": "^4.6.1",
-    "@popperjs/core": "^2.11.0",
-    "@types/react-modal": "3.13.1",
-    "@types/react-select": "3.0.26",
-    "@types/react-table": "^7.7.9",
-    "classnames": "^2.3.1",
-    "date-fns": "^2.27.0",
-    "dequal": "^2.0.2",
-    "focus-trap-react": "^8.9.0",
+    "@popperjs/core": "^2.11.7",
+    "@types/react-modal": "3.16.0",
+    "@types/react-select": "3.1.2",
+    "@types/react-table": "^7.7.14",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
+    "dequal": "^2.0.3",
+    "focus-trap-react": "^10.1.1",
     "formik": "^2.2.9",
-    "nuka-carousel": "^5.4.0",
-    "rc-tooltip": "^5.1.1",
-    "react-datepicker": "^4.5.0",
-    "react-feather": "^2.0.9",
+    "nuka-carousel": "^5.5.1",
+    "rc-tooltip": "^5.3.1",
+    "react-datepicker": "^4.11.0",
+    "react-feather": "^2.0.10",
     "react-hotkeys": "^2.0.0",
     "react-merge-refs": "^1.1.0",
-    "react-modal": "^3.14.4",
-    "react-popper": "^2.2.3",
+    "react-modal": "^3.16.1",
+    "react-popper": "^2.3.0",
     "react-resize-aware": "3.1.1",
-    "react-select": "^4.1.0",
-    "react-simple-timefield": "^3.2.5",
-    "react-table": "^7.7.0",
-    "react-uid": "^2.3.1",
-    "react-use": "^17.3.1",
+    "react-select": "^4.3.1",
+    "react-simple-timefield": "^3.3.1",
+    "react-table": "^7.8.0",
+    "react-uid": "^2.3.2",
+    "react-use": "^17.4.0",
     "use-deep-compare": "^1.1.0"
   },
   "devDependencies": {
@@ -85,31 +85,36 @@
     "@storybook/react": "^6.5.16",
     "@storybook/theming": "^6.5.16",
     "@types/classnames": "^2.3.1",
-    "@types/enzyme": "^3.10.10",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/enzyme": "^3.10.12",
     "@types/jest-axe": "^3.5.3",
-    "@types/react": "^16.14.21",
+    "@types/react": "^17.0.45",
     "@types/react-datepicker": "^4.3.2",
-    "@types/react-dom": "^16.9.14",
-    "doiuse": "^4.2.0",
+    "@types/react-dom": "^17.0.17",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
+    "babel-loader": "^9.1.2",
+    "doiuse": "^4.4.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "jest-axe": "^5.0.1",
     "loki": "^0.31.1",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.23",
     "postcss-cli": "^9.1.0",
-    "postcss-reporter": "^7.0.4",
-    "postcss-scss": "^4.0.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "storybook-addon-designs": "^6.2.0",
-    "stylelint": "^14.1.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-prettier": "^2.0.0",
-    "stylelint-scss": "^4.0.1",
-    "webpack": "^5.79.0",
+    "postcss-reporter": "^7.0.5",
+    "postcss-scss": "^4.0.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "storybook-addon-designs": "^6.3.1",
+    "stylelint": "^15.6.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-prettier": "^3.0.0",
+    "stylelint-scss": "^4.6.0",
+    "webpack": "^5.81.0",
     "yup": "^0.32.11"
+  },
+  "peerDependencies": {
+    "@types/react": "^17 || ^18",
+    "@types/react-dom": "^17 || ^18",
+    "react": "^17 || ^18",
+    "react-dom": "^17 || ^18"
   }
 }
