--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,9 +32,9 @@
     "build-storybook": "build-storybook",
     "publish-storybook": "chromatic --storybook-build-dir storybook-static --project-token $CHROMATIC_PROJECT_TOKEN --exit-zero-on-changes",
     "chromatic": "chromatic --project-token=CHROMATIC_PROJECT_TOKEN",
-    "test:visual": "loki --verboseRenderer --requireReference --reactUri file:./storybook-static --chromeDockerImage 'yukinying/chrome-headless-browser-stable:latest' --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
+    "test:visual": "loki --verboseRenderer --requireReference --reactUri file:./storybook-static --chromeDockerImage 'yukinying/chrome-headless-browser-stable:100.0.4896.127' --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
     "test:visual:approve": "loki approve",
-    "generate-screenshots": "pnpm run build-storybook && loki update --reactUri file:./storybook-static --chromeDockerImage 'yukinying/chrome-headless-browser-stable:latest' --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
+    "generate-screenshots": "pnpm run build-storybook && loki update --reactUri file:./storybook-static --chromeDockerImage 'yukinying/chrome-headless-browser-stable:100.0.4896.127' --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
     "lint": "pnpm run lint:ts && pnpm run lint:css",
     "lint:fix": "pnpm run lint:ts:fix && pnpm run lint:css:fix",
     "lint:ts": "eslint --ext .ts,.tsx .",
