fix(test): unit & visual

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "compile": "pnpm m run compile",
     "postinstall": "pnpm run compile",
     "test": "pnpm m run test",
-    "test:visual": "NODE_OPTIONS='--openssl-legacy-provider' pnpm run --filter @hazelcast/ui test:visual",
-    "test:visual:approve": "NODE_OPTIONS='--openssl-legacy-provider' pnpm run --filter @hazelcast/ui test:visual:approve",
+    "test:visual": "pnpm run --filter @hazelcast/ui test:visual",
+    "test:visual:approve": "pnpm run --filter @hazelcast/ui test:visual:approve",
     "lint": "pnpm m run lint",
     "verify-all": "pnpm run lint && pnpm run test && pnpm run build-storybook && pnpm run test:visual",
     "build-storybook": "pnpm m run build-storybook",
