--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "packages": ["packages/*"],
   "npmClient": "pnpm",
+  "useWorkspaces": true,
   "version": "1.3.2",
   "command": {
     "version": {
